feat:codegen，示例
